Fix danish flag for real

--- a/src/pretix/static/pretixcontrol/scss/_flags.scss
+++ b/src/pretix/static/pretixcontrol/scss/_flags.scss
@@ -70,7 +70,7 @@ pre[lang=cz], input[lang=cz], textarea[lang=cz] { background-image: url(static('
 pre[lang=de], input[lang=de], textarea[lang=de] { background-image: url(static('pretixbase/img/flags/de.png')); }
 pre[lang=de-informal], input[lang=de-informal], textarea[lang=de-informal] { background-image: url(static('pretixbase/img/flags/de-informal.png')); }
 pre[lang=dj], input[lang=dj], textarea[lang=dj] { background-image: url(static('pretixbase/img/flags/dj.png')); }
-pre[lang=da], input[lang=da], textarea[lang=da] { background-image: url(static('pretixbase/img/flags/da.png')); }
+pre[lang=da], input[lang=da], textarea[lang=da] { background-image: url(static('pretixbase/img/flags/dk.png')); }
 pre[lang=dk], input[lang=dk], textarea[lang=dk] { background-image: url(static('pretixbase/img/flags/dk.png')); }
 pre[lang=dm], input[lang=dm], textarea[lang=dm] { background-image: url(static('pretixbase/img/flags/dm.png')); }
 pre[lang=do], input[lang=do], textarea[lang=do] { background-image: url(static('pretixbase/img/flags/do.png')); }
