--- a/src/pretix/control/templates/pretixcontrol/items/question_edit.html
+++ b/src/pretix/control/templates/pretixcontrol/items/question_edit.html
@@ -23,6 +23,7 @@
             {% bootstrap_field form.question layout="control" %}
             {% bootstrap_field form.help_text layout="control" %}
             {% bootstrap_field form.type layout="control" %}
+            {% bootstrap_field form.identifier layout="control" %}
             {% bootstrap_field form.ask_during_checkin layout="control" %}
             {% bootstrap_field form.required layout="control" %}
         </fieldset>
@@ -54,10 +55,16 @@
                             </div>
                             <div class="row question-option-row">
                                 <div class="col-xs-10">
+                                    <span class="text-muted">
+                                        {% blocktrans trimmed with id=form.instance.identifier %}
+                                            Answer option {{ id }}
+                                        {% endblocktrans %}
+                                    </span>
                                     {% bootstrap_form_errors form %}
                                     {% bootstrap_field form.answer layout='inline' form_group_class="" %}
                                 </div>
                                 <div class="col-xs-2 text-right">
+                                    <span>&nbsp;</span><br>
                                     <button type="button" class="btn btn-default" data-formset-move-up-button>
                                         <i class="fa fa-arrow-up"></i></button>
                                     <button type="button" class="btn btn-default" data-formset-move-down-button>
@@ -79,9 +86,13 @@
                             </div>
                             <div class="row question-option-row">
                                 <div class="col-xs-10">
+                                    <span class="text-muted">
+                                        {% trans "New answer option" %}
+                                    </span>
                                     {% bootstrap_field formset.empty_form.answer layout='inline' form_group_class="" %}
                                 </div>
                                 <div class="col-xs-2 text-right">
+                                    <span>&nbsp;</span><br>
                                     <button type="button" class="btn btn-default" data-formset-move-up-button>
                                         <i class="fa fa-arrow-up"></i></button>
                                     <button type="button" class="btn btn-default" data-formset-move-down-button>
