--- a/src/pretix/static/pretixcontrol/scss/_forms.scss
+++ b/src/pretix/static/pretixcontrol/scss/_forms.scss
@@ -337,3 +337,19 @@ table td > .checkbox input[type="checkbox"] {
     line-height: 40px;
   }
 }
+.accordion-radio {
+  display: block;
+  margin: 0;
+}
+.panel-default>.accordion-radio>.panel-heading {
+  color: #333;
+  background-color: #f5f5f5;
+  padding: 12px 15px;
+
+  input[type=checkbox] {
+    margin-top: 0;
+    margin-right: 5px;
+    position: relative;
+    top: 2px;
+  }
+}
