--- a/src/pretix/control/templates/pretixcontrol/users/form.html
+++ b/src/pretix/control/templates/pretixcontrol/users/form.html
@@ -25,7 +25,7 @@
                     {% bootstrap_field form.fullname layout='control' %}
                     {% bootstrap_field form.locale layout='control' %}
                     {% bootstrap_field form.timezone layout='control' %}
-                    {% bootstrap_field form.is_superuser layout='control' %}
+                    {% bootstrap_field form.is_staff layout='control' %}
                 </fieldset>
                 <fieldset>
                     <legend>{% trans "Log-in settings" %}</legend>
