--- a/src/pretix/control/templates/pretixcontrol/events/create_base.html
+++ b/src/pretix/control/templates/pretixcontrol/events/create_base.html
@@ -29,7 +29,7 @@
         <div class="alert alert-danger">
             {% trans "Every event needs to be created as part of an organizer account. Currently, you do not have access to any organizer accounts." %}
         </div>
-        {% if request.user.is_superuser %}
+        {% if staff_session %}
             <a href="{% url "control:organizers.add" %}" class="btn btn-default">
                 {% trans "Create a new organizer" %}
             </a>
