--- a/src/pretix/control/templates/pretixcontrol/users/index.html
+++ b/src/pretix/control/templates/pretixcontrol/users/index.html
@@ -56,7 +56,7 @@
                 </strong></td>
                 <td>{{ u.fullname|default_if_none:"" }}</td>
                 <td>{% if u.is_active %}<span class="fa fa-check-circle"></span>{% endif %}</td>
-                <td>{% if u.is_superuser %}<span class="fa fa-check-circle"></span>{% endif %}</td>
+                <td>{% if u.is_staff %}<span class="fa fa-check-circle"></span>{% endif %}</td>
                 <td class="text-right">
                     <a href="{% url "control:users.edit" id=u.id %}" class="btn btn-default btn-sm"><i class="fa fa-edit"></i></a>
                 </td>
