--- a/src/pretix/static/pretixcontrol/scss/main.scss
+++ b/src/pretix/static/pretixcontrol/scss/main.scss
@@ -53,7 +53,7 @@ nav.navbar .danger, nav.navbar .danger:hover, nav.navbar .danger:active {
     margin-bottom: 10px;
 }
 
-#button-shop {
+#button-shop, #button-sudo {
     padding: 15px;
     min-height: 50px;
     border: none;
