--- a/src/pretix/presale/templates/pretixpresale/event/base.html
+++ b/src/pretix/presale/templates/pretixpresale/event/base.html
@@ -1,7 +1,7 @@
 {% extends "pretixpresale/base.html" %}
 {% load i18n %}
 {% load staticfiles %}
-{% load thumbnail %}
+{% load thumb %}
 {% load eventurl %}
 {% load safelink %}
 {% block thetitle %}
@@ -27,7 +27,7 @@
             {% if event_logo %}
                 <a href="{% eventurl event "presale:event.index" cart_namespace=cart_namespace|default_if_none:"" %}"
                         title="{{ event.name }}">
-                    <img src="{{ event_logo|thumbnail_url:'logo' }}" alt="{{ event.name }}" class="event-logo" />
+                    <img src="{{ event_logo|thumb:'5000x120' }}" alt="{{ event.name }}" class="event-logo" />
                 </a>
             {% else %}
                 <h1>
