--- a/src/pretix/presale/templates/pretixpresale/event/voucher.html
+++ b/src/pretix/presale/templates/pretixpresale/event/voucher.html
@@ -4,7 +4,7 @@
 {% load money %}
 {% load eventurl %}
 {% load eventsignal %}
-{% load thumbnail %}
+{% load thumb %}
 {% load rich_text %}
 {% block title %}{% trans "Voucher redemption" %}{% endblock %}
 
@@ -42,7 +42,7 @@
                                                     data-title="{{ item.name|force_escape|force_escape }}"
                                                     {# Yes, double-escape to prevent XSS in lightbox #}
                                                     data-lightbox="{{ item.id }}">
-                                                <img src="{{ item.picture|thumbnail_url:'productlist' }}"
+                                                <img src="{{ item.picture|thumb:'60x60^' }}"
                                                         alt="{{ item.name }}"/>
                                             </a>
                                         {% endif %}
@@ -139,7 +139,7 @@
                                                 data-title="{{ item.name|force_escape|force_escape }}"
                                                 {# Yes, double-escape to prevent XSS in lightbox #}
                                                 data-lightbox="{{ item.id }}">
-                                            <img src="{{ item.picture|thumbnail_url:'productlist' }}"
+                                            <img src="{{ item.picture|thumb:'60x60^' }}"
                                                     alt="{{ item.name }}"/>
                                         </a>
                                     {% endif %}
