--- a/src/pretix/presale/templates/pretixpresale/event/waitinglist.html
+++ b/src/pretix/presale/templates/pretixpresale/event/waitinglist.html
@@ -1,5 +1,5 @@
 {% extends "pretixpresale/event/base.html" %}
-{% load i18n eventurl thumbnail bootstrap3 %}
+{% load i18n eventurl bootstrap3 %}
 {% block title %}{% trans "Waiting list" %}{% endblock %}
 {% block content %}
     <h2>{% trans "Add me to the waiting list" %}</h2>
