--- a/src/pretix/presale/templates/pretixpresale/organizers/base.html
+++ b/src/pretix/presale/templates/pretixpresale/organizers/base.html
@@ -1,7 +1,7 @@
 {% extends "pretixpresale/base.html" %}
 {% load i18n %}
 {% load staticfiles %}
-{% load thumbnail %}
+{% load thumb %}
 {% load eventurl %}
 {% block thetitle %}
     {% block title %}{% endblock %}{% if url_name != "organizer.index" %} :: {% endif %}{{ organizer.name }}
@@ -11,7 +11,8 @@
         <div class="pull-left">
             {% if organizer_logo %}
                 <a href="{% eventurl organizer "presale:organizer.index" %}" title="{{ organizer.name }}">
-                    <img src="{{ organizer_logo|thumbnail_url:'logo' }}" alt="{{ organizer.name }}" class="organizer-logo" />
+                    <img src="{{ organizer_logo|thumb:'5000x120' }}" alt="{{ organizer.name }}"
+                            class="organizer-logo" />
                 </a>
             {% else %}
                 <h1><a href="{% eventurl organizer "presale:organizer.index" %}">{{ organizer.name }}</a></h1>
