--- a/src/pretix/presale/templates/pretixpresale/event/index.html
+++ b/src/pretix/presale/templates/pretixpresale/event/index.html
@@ -225,7 +225,7 @@
                                                         data-title="{{ item.name|force_escape|force_escape }}"
                                                         {# Yes, double-escape to prevent XSS in lightbox #}
                                                         data-lightbox="{{ item.id }}">
-                                                    <img src="{{ item.picture.name|thumb:'60x60^' }}"
+                                                    <img src="{{ item.picture|thumb:'60x60^' }}"
                                                             alt="{{ item.name }}"/>
                                                 </a>
                                             {% endif %}
@@ -348,7 +348,7 @@
                                                     data-title="{{ item.name|force_escape|force_escape }}"
                                                     {# Yes, double-escape to prevent XSS in lightbox #}
                                                     data-lightbox="{{ item.id }}">
-                                                <img src="{{ item.picture.name|thumb:'60x60^' }}"
+                                                <img src="{{ item.picture|thumb:'60x60^' }}"
                                                         alt="{{ item.name }}"/>
                                             </a>
                                         {% endif %}
