--- a/src/pretix/static/pretixcontrol/scss/main.scss
+++ b/src/pretix/static/pretixcontrol/scss/main.scss
@@ -128,6 +128,10 @@ h1 .btn-sm {
     padding-top: 20px;
 }
 
+p.bigger {
+    font-size: 16px;
+}
+
 .helper-display-block {
     display: block !important;
 }
