--- a/src/pretix/static/pretixcontrol/scss/main.scss
+++ b/src/pretix/static/pretixcontrol/scss/main.scss
@@ -521,3 +521,7 @@ ul.pagination {
 .pagination-container {
     margin-bottom: 20px;
 }
+
+.table-payment-providers > tbody > tr > td {
+    vertical-align: middle;
+}
