--- a/src/pretix/control/templates/pretixcontrol/subevents/bulk.html
+++ b/src/pretix/control/templates/pretixcontrol/subevents/bulk.html
@@ -70,6 +70,12 @@
                                             {% captureas ffield_monthly_byweekday %}
                                                 {% bootstrap_field f.monthly_byweekday layout="inline" %}
                                             {% endcaptureas %}
+                                            {% captureas ffield_count %}
+                                                {% bootstrap_field f.count layout="inline" %}
+                                            {% endcaptureas %}
+                                            {% captureas ffield_until %}
+                                                {% bootstrap_field f.until layout="inline" %}
+                                            {% endcaptureas %}
 
                                             {% blocktrans trimmed with freq=ffield_freq interval=ffield_interval start=ffield_dtstart %}
                                                 Repeat every {{ interval }} {{ freq }}, starting at {{ start }}.
@@ -78,12 +84,11 @@
                                             <div class="repeat-yearly">
                                                 <div class="radio">
                                                     <label>
-                                                        <input type="radio" name="{{ f.yearly_same.html_name }}" value="on"
-                                                            checked />
+                                                        {{ f.yearly_same.0 }}
                                                         {% trans "At the same date every year" %}
                                                     </label><br>
                                                     <label>
-                                                        <input type="radio" name="{{ f.yearly_same.html_name }}" value="off" />
+                                                        {{ f.yearly_same.1 }}
                                                         {% blocktrans trimmed with setpos=ffield_yearly_bysetpos weekday=ffield_yearly_byweekday month=ffield_yearly_bymonth %}
                                                             On the {{ setpos }} {{ weekday }} of {{ month }}
                                                         {% endblocktrans %}<br>
@@ -93,13 +98,11 @@
                                             <div class="repeat-monthly">
                                                 <div class="radio">
                                                     <label>
-                                                        <input type="radio" name="{{ f.monthly_same.html_name }}"
-                                                                value="on" checked />
+                                                        {{ f.monthly_same.0 }}
                                                         {% trans "At the same date every month" %}
                                                     </label><br>
                                                     <label>
-                                                        <input type="radio" name="{{ f.monthly_same.html_name }}"
-                                                                value="off" />
+                                                        {{ f.monthly_same.1 }}
                                                         {% blocktrans trimmed with setpos=ffield_monthly_bysetpos weekday=ffield_monthly_byweekday %}
                                                             On the {{ setpos }} {{ weekday }}
                                                         {% endblocktrans %}<br>
@@ -108,6 +111,22 @@
                                             </div>
                                             <div class="repeat-weekly">
                                                 {% bootstrap_field f.weekly_byweekday layout="inline" %}
+                                            </div>
+                                            <div class="repeat-until">
+                                                <div class="radio">
+                                                    <label>
+                                                        {{ f.end.0 }}
+                                                        {% blocktrans trimmed with count=ffield_count %}
+                                                            Repeat for {{ count }} times
+                                                        {% endblocktrans %}
+                                                    </label><br>
+                                                    <label>
+                                                        {{ f.end.1 }}
+                                                        {% blocktrans trimmed with until=ffield_until %}
+                                                            Repeat until {{ until }}
+                                                        {% endblocktrans %}<br>
+                                                    </label>
+                                                </div>
                                             </div>
                                             {% bootstrap_field f.exclude layout="inline" %}
                                         </div>
@@ -118,12 +137,111 @@
                         <script type="form-template" data-formset-empty-form>
                             {% escapescript %}
                                 <div data-formset-form>
-                                    <div class="sr-only">
-                                        {% bootstrap_field rrule_formset.empty_form.DELETE form_group_class="" layout="inline" %}
+                                    <div class="panel panel-default">
+                                        <div class="panel-heading">
+                                            <h4 class="panel-title">
+                                                <div class="row">
+                                                    <div class="col-md-10">
+                                                        {% trans "Repetition rule" %}
+                                                    </div>
+                                                    <div class="col-md-2 text-right">
+                                                        <button type="button" class="btn btn-danger btn-xs"
+                                                                data-formset-delete-button>
+                                                            <i class="fa fa-trash"></i></button>
+                                                    </div>
+                                                </div>
+                                            </h4>
+                                        </div>
+                                        <div class="panel-body form-inline rrule-form">
+                                            <div class="sr-only">
+                                                {{ rrule_formset.empty_form.id }}
+                                                {% bootstrap_field rrule_formset.empty_form.DELETE form_group_class="" layout="inline" %}
+                                            </div>
+                                            {% captureas ffield_freq %}
+                                                {% bootstrap_field rrule_formset.empty_form.freq layout="inline" %}
+                                            {% endcaptureas %}
+                                            {% captureas ffield_interval %}
+                                                {% bootstrap_field rrule_formset.empty_form.interval layout="inline" %}
+                                            {% endcaptureas %}
+                                            {% captureas ffield_dtstart %}
+                                                {% bootstrap_field rrule_formset.empty_form.dtstart layout="inline" %}
+                                            {% endcaptureas %}
+                                            {% captureas ffield_yearly_bysetpos %}
+                                                {% bootstrap_field rrule_formset.empty_form.yearly_bysetpos layout="inline" %}
+                                            {% endcaptureas %}
+                                            {% captureas ffield_yearly_byweekday %}
+                                                {% bootstrap_field rrule_formset.empty_form.yearly_byweekday layout="inline" %}
+                                            {% endcaptureas %}
+                                            {% captureas ffield_yearly_bymonth %}
+                                                {% bootstrap_field rrule_formset.empty_form.yearly_bymonth layout="inline" %}
+                                            {% endcaptureas %}
+                                            {% captureas ffield_monthly_bysetpos %}
+                                                {% bootstrap_field rrule_formset.empty_form.monthly_bysetpos layout="inline" %}
+                                            {% endcaptureas %}
+                                            {% captureas ffield_monthly_byweekday %}
+                                                {% bootstrap_field rrule_formset.empty_form.monthly_byweekday layout="inline" %}
+                                            {% endcaptureas %}
+                                            {% captureas ffield_count %}
+                                                {% bootstrap_field rrule_formset.empty_form.count layout="inline" %}
+                                            {% endcaptureas %}
+                                            {% captureas ffield_until %}
+                                                {% bootstrap_field rrule_formset.empty_form.until layout="inline" %}
+                                            {% endcaptureas %}
+
+                                            {% blocktrans trimmed with freq=ffield_freq interval=ffield_interval start=ffield_dtstart %}
+                                                Repeat every {{ interval }} {{ freq }}, starting at {{ start }}.
+                                            {% endblocktrans %}<br>
+
+                                            <div class="repeat-yearly">
+                                                <div class="radio">
+                                                    <label>
+                                                        {{ rrule_formset.empty_form.yearly_same.0 }}
+                                                        {% trans "At the same date every year" %}
+                                                    </label><br>
+                                                    <label>
+                                                        {{ rrule_formset.empty_form.yearly_same.1 }}
+                                                        {% blocktrans trimmed with setpos=ffield_yearly_bysetpos weekday=ffield_yearly_byweekday month=ffield_yearly_bymonth %}
+                                                            On the {{ setpos }} {{ weekday }} of {{ month }}
+                                                        {% endblocktrans %}<br>
+                                                    </label>
+                                                </div>
+                                            </div>
+                                            <div class="repeat-monthly">
+                                                <div class="radio">
+                                                    <label>
+                                                        {{ rrule_formset.empty_form.monthly_same.0 }}
+                                                        {% trans "At the same date every month" %}
+                                                    </label><br>
+                                                    <label>
+                                                        {{ rrule_formset.empty_form.monthly_same.1 }}
+                                                        {% blocktrans trimmed with setpos=ffield_monthly_bysetpos weekday=ffield_monthly_byweekday %}
+                                                            On the {{ setpos }} {{ weekday }}
+                                                        {% endblocktrans %}<br>
+                                                    </label>
+                                                </div>
+                                            </div>
+                                            <div class="repeat-weekly">
+                                                {% bootstrap_field rrule_formset.empty_form.weekly_byweekday layout="inline" %}
+                                            </div>
+                                            <div class="repeat-until">
+                                                <div class="radio">
+                                                    <label>
+                                                        {{ rrule_formset.empty_form.end.0 }}
+                                                        {% blocktrans trimmed with count=ffield_count %}
+                                                            Repeat for {{ count }} times
+                                                        {% endblocktrans %}
+                                                    </label><br>
+                                                    <label>
+                                                        {{ rrule_formset.empty_form.end.1 }}
+                                                        {% blocktrans trimmed with until=ffield_until %}
+                                                            Repeat until {{ until }}
+                                                        {% endblocktrans %}<br>
+                                                    </label>
+                                                </div>
+                                            </div>
+                                            {% bootstrap_field rrule_formset.empty_form.exclude layout="inline" %}
+                                        </div>
                                     </div>
-                                    {% bootstrap_field rrule_formset.empty_form.exclude layout='inline' form_group_class="" %}
-                                    <button type="button" class="btn btn-danger" data-formset-delete-button>
-                                        <i class="fa fa-trash"></i></button>
                                 </div>
                             {% endescapescript %}
                         </script>
@@ -137,6 +255,8 @@
             <div class="col-md-4">
                 <fieldset>
                     <legend>{% trans "Preview" context "subevent" %}</legend>
+                    <ul id="rrule-preview">
+                    </ul>
                 </fieldset>
             </div>
         </div>
