--- a/src/pretix/control/templates/pretixcontrol/subevents/bulk.html
+++ b/src/pretix/control/templates/pretixcontrol/subevents/bulk.html
@@ -291,8 +291,8 @@
         </fieldset>
         <fieldset>
             <legend>{% trans "Timeline" %}</legend>
-            {% bootstrap_field form.presale_start layout="control" %}
-            {% bootstrap_field form.presale_end layout="control" %}
+            {% bootstrap_field form.rel_presale_start layout="control" %}
+            {% bootstrap_field form.rel_presale_end layout="control" %}
         </fieldset>
         <fieldset>
             <legend>{% trans "Quotas" %}</legend>
